<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_main"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="513dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView4" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"></RadioGroup>

    <RadioButton
        android:id="@+id/Hombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/Hombre"
        android:onClick="selectSexo"
        />

    <RadioButton
        android:id="@+id/Mujer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Hombre"
        android:layout_below="@+id/Hombre"
        android:text="@string/Mujer"
        android:onClick="selectSexo"
        />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Mujer"
        android:layout_gravity="center_horizontal"
        android:text="hola"
        android:visibility="invisible"
        android:textAppearance="?android:textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Mujer"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginStart="30dp"
        android:max="130" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Hombre"
        android:layout_marginStart="90dp"
        android:layout_toEndOf="@+id/Hombre"
        android:text="Peso"
        android:textSize="22sp" />


</RelativeLayout>