<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nombreIngrediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="nombre" />

    <EditText
        android:id="@+id/calorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nombreIngrediente"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="kcal" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/calorias"
        android:layout_marginTop="46dp"
        android:text="SAVE" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floatingActionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        app:menu_fab_label=""
        app:menu_openDirection="up"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_showShadow="true">

    <com.github.clans.fab.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_label="@string/Test1"
        app:fab_size="mini"
        android:id="@+id/floatingActionItem1"
        android:src="@drawable/ic_dietas"
        />
        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/Test2"
            app:fab_size="mini"
            android:id="@+id/floatingActionItem2"
            android:src="@drawable/ic_dietas"
            />
        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/Test3"
            app:fab_size="mini"
            android:id="@+id/floatingActionItem3"
            android:src="@drawable/ic_dietas"
            />
    </com.github.clans.fab.FloatingActionMenu>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_main"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="513dp" />
</RelativeLayout>