<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_main"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="513dp" />

    <TextView
        android:id="@+id/txtObjetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:text="Elige tu objetivo." />

    <Button
        android:id="@+id/btnPierdePeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="81dp"
        android:text="Pierde peso" />

    <Button
        android:id="@+id/btnAumentaMasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="146dp"
        android:layout_toStartOf="@+id/floatingActionMenu"
        android:text="Aumenta tu masa muscular" />

    <Button
        android:id="@+id/btnSano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAumentaMasa"
        android:layout_toEndOf="@+id/btnPierdePeso"
        android:text="Mantente sano" />
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floatingActionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        app:menu_fab_label=""
        app:menu_openDirection="up"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/Test1"
            app:fab_size="mini"
            android:id="@+id/floatingActionItem1"
            android:src="@drawable/ic_dietas"
            />
        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/Test2"
            app:fab_size="mini"
            android:id="@+id/floatingActionItem2"
            android:src="@drawable/ic_dietas"
            />
        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/Test3"
            app:fab_size="mini"
            android:id="@+id/floatingActionItem3"
            android:src="@drawable/ic_dietas"
            />
    </com.github.clans.fab.FloatingActionMenu>


</RelativeLayout>